--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://nezasa.join.com/jobs/262609-backend-software-engineer'>Job @ Nezasa (Lisbon): Backend Software Engineer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2676'>Senior Software Engineer - DTCC Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -93,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -135,7 +143,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/etsy/506af146-5384-4dc1-a35c-0de5f913a61b'>Etsy - Senior Software Engineer, Web Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/506af146-5384-4dc1-a35c-0de5f913a61b'>Etsy - Senior Software Engineer, Web Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -175,7 +183,18 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-VA-Arlington-4121-Wilson-Blvd-7th-Floor/Software-Developer_R0048320'>Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 16, 2019 ... Software Developer. The Challenge: Are you looking for an opportunity to not just 
+develop software, but to build a system that will have an impact? As a full-stack?...</p>
+<hr/>
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-AL-Montgomery-445-Dexter-Ave/Java-Software-Engineer--Senior_R0062054'>Java Software Engineer, Senior</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 14, 2019 ... As a full-stack developer, you can solve a problem with a complete end-to-end 
+solution in a fast-paced, agile environment. We're looking for a developer with the
+?...</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kiperformance.join.com/jobs/267342-mobile-software-engineer-ios-m-w-d'>Job @ KI Group (Cologne): Mobile Software Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -183,7 +202,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
+<h5><a href='https://jobs.lever.co/apartmentlist/753db94c-0f02-4d74-ae7e-e0de63528974'>Apartment List - Full-Stack Software Engineer - Connections</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -293,7 +312,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oXG19fwx'>Shutterfly Careers - Lead Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oXG19fwx'>Shutterfly Careers - Lead Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -369,7 +388,7 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/perimeterx/b3959a1c-3679-4437-be0e-e411b343643e'>PerimeterX - Junior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perimeterx/b3959a1c-3679-4437-be0e-e411b343643e'>PerimeterX - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -409,7 +428,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/zscaler/job/oBKuafwJ'>Zscaler Careers - Sr. Java Software Engineer (Application Security)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zscaler/job/oBKuafwJ'>Zscaler Careers - Sr. Java Software Engineer (Application Security)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -421,7 +440,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light">Singapore Singapore Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/druva/2626ab12-e4a3-43fc-9732-b83f39f285ba'>Druva - Senior Software Engineer - Escalations Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/druva/2626ab12-e4a3-43fc-9732-b83f39f285ba'>Druva - Senior Software Engineer - Escalations Engineering</a></h5> 
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -443,23 +462,7 @@ Developer ? Sr. Software Engineer ? Senior Web Developer?...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/oZIeafwP'>SugarCRM Careers - Senior Software Engineer - 2068</a></h5> 
-<p><span class="badge badge-light">Atlanta</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oDF37fwc'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Android</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oEF37fwd'>Numbrs Personal Finance AG Careers - Software Engineer, Android - Remote</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oHG37fwh'>Numbrs Personal Finance AG Careers - Senior Software Engineer, Backend</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
